--- a/style.css
+++ b/style.css
@@ -6,7 +6,23 @@ body{
 }
 #nav-bar{
     background-color: rgb(150, 243, 43);
+    
+}
+ul{
+    display:flex;
+    flex-direction: column;
+    background-color: rgb(223, 108, 108);
+}
+li{
+    padding-right:20px;
 }
 .nav-link{
     background-color: aquamarine;
+}
+@media(min-height:800x)
+{
+    ul{
+        display:flex;
+        flex-direction:rows;
+    }
 }
